--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,65 @@
     <head>
         <meta charset="UTF-8">
         <title>School</title>
+        <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
         <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
         <script src="https://cdn.amcharts.com/lib/5/xy.js"></script> 
+        <script src="https://cdn.amcharts.com/lib/5/map.js"></script>
+        <script src="https://cdn.amcharts.com/lib/5/geodata/canadaLow.js"></script>
         <script src="{{ url_for('static', filename = 'chart.js')}}"></script>
-        <link rel="stylesheet" href="{{ url_for('static', filename = 'chart.js')}}"
-        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css')}}">
     </head>
     <body>
-        <div id = "most_achieve"></div>
+        <div>
+            <div id = "controllers", class="card">
+                <H4 class="card-header">Canada's Schools Analysis</H4>
+                <div class = "card-body row">
+                    <div class="col">
+                        <label for="achieve_drop" class = "form-label">Achievement:</label>
+                        <select id="achieve_drop" class = "form-select"> </select>
+                    </div>
+                    <div class = "col">
+                        <label for="level_radio" class = "form-label">School Level:</label>
+                        <form id="level_radio", class="form-select">
+                            <label>
+                              <input type="radio" name="option" value="Elementary" checked> Elementary
+                            </label>
+                            <label>
+                              <input type="radio" name="option" value="Secondary"> Secondary
+                            </label>
+                        </form>     
+                    </div>
+                </div>             
+            </div>
+
+            <div class = "row">
+                <div class = "col">
+                    <label for="most_achieve"class = "form-label">Top schools by percentage of students achiveing</label> 
+                    <label for="most_achieve"class = "form-label">(showing Province and Enrolment)</label>
+                    <div id = "most_achieve"></div>
+                </div>
+                <div class = "col">
+                    <label for="dist_map" class = "form-label">Schools Geo Distribution</label>
+                    <br>
+                    <div id = "dist_map"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
+
+
+<script>
+    const optionsList = ['gifted_perc', 'G3_reading', 'G3_writing', 'G3_math', 'G6_reading', 'G6_writing', 'G6_math', 'G9_math', 'G10_OSSLT'];
+    const label= ['Students Identified as Gifted', 'Grade 3 Students Achieving the Provincial Standard in Reading', 'Grade 3 Students Achieving the Provincial Standard in Writing', 'Grade 3 Students Achieving the Provincial Standard in Mathematics', 'Grade 6 Students Achieving the Provincial Standard in Reading', 'Grade 6 Students Achieving the Provincial Standard in Writing', 'Grade 6 Students Achieving the Provincial Standard in Mathematics', 'Grade 9 Students Achieving the Provincial Standard in Mathematics', 'Students That Passed the Grade 10 OSSLT on Their First Attempt']
+    const dropdown = document.getElementById('achieve_drop');
+    for (let i = 0; i < optionsList.length; i++) {
+        let option = document.createElement("option");
+        option.value = optionsList[i];
+        option.textContent = label[i];
+        dropdown.appendChild(option);
+    }
+</script>
+    
